[package]
name = "pg-bitcoin"
version = "0.1.0"
authors = ["reud <reiji.kobayashi.9n@stu.hosei.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits= "0.2.14"

[[bin]]
name = "fieldElement"
path = "src/field_element.rs"

[[bin]]
name = "point"
path = "src/point.rs"
