[package]
name = "pg-bitcoin"
version = "0.1.0"
authors = ["reud <reiji.kobayashi.9n@stu.hosei.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits= "0.2.14"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
