[package]
name = "pg-bitcoin"
version = "0.1.0"
authors = ["reud <reiji.kobayashi.9n@stu.hosei.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits= "0.2.14"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
once_cell = "1.7.2"
crypto-hash = "0.3.4"
ripemd160 = "0.9.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }